# LearningPythonLab

./: .pre-commit-config.yaml  README.md  hello.py  mypy.ini  pyproject.toml
Factory_boy/: README.md  docker-compose.yml
Factory_boy/app/: database.py  factories.py  main.py  models.py
Factory_boy/tests/: conftest.py  generate_data.py  test_sample.py
OpenTelemetry/: README.md  docker-compose.yml  requirements.txt
OpenTelemetry/app/: config.py  main.py
log/: docs.md  pyproject.toml
log-1/: docs.md
log-1/logApp1/: log_1_app.py  log_1_app_base.py
log-1/test_logApp/: test_log_1_app.py
pandasai/pandasApp/: pandasApp.py
postgresql/: README.md
postgresql/L_or_Not/: README.md  basicdatacheck005.py  docker-compose.yml  make_dammydata005.py  mutation_speed005.py  query_speed005.py
postgresql/L_or_Not_equare/: README.md  basicdatacheck006.py  docker-compose.yml  make_dammydata006.py  make_table006.py  mutation_speed006.py  query_speed006.py  requirements.txt
postgresql/arryTest/: README.md  basicdatacheck001.py  docker-compose.yml  make_dammydata001.py  make_table001.py  query_speed001.py
postgresql/join_p/: README.md
postgresql/json_p/: README.md  docker-compose.yml  make_dammydata004.py  make_table004.py  query_speed004.py  update_speed004.py
postgresql/pairUnique/: README.md  basicdatacheck007.py  docker-compose.yml  make_dammydata007.py  make_table007.py  mutation_speed_1007.py  mutation_speed_3007.py
pytest/: docs.md
pytest/src/: converter_1.py  converter_3.py  converter_4.py
pytest/tests/: test_converter_1.py  (+3 more)
streamlitPractice/: docs.md
(+12 files in other folders)
