[project]
name = "learningpythonlab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.3",
    "httpx>=0.27.2",
    "pandas>=2.2.3",
    "pip-licenses>=5.0.0",
    "pre-commit>=4.0.1",
    "pytest-mypy-plugins>=3.1.2",
    "pytest>=8.3.3",
    "streamlit>=1.39.0",
]
